Updated repo with correct code base

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,20 @@
-<p>about-us works!</p>
+<div class="user-list row">
+    <div class="user-details col-8 p-5">
+		<h1>About me</h1>
+        <div>
+        	<mat-card class="example-card shadow">
+			  <mat-card-header class="px-5 py-4">
+			    <mat-card-title>Jaco Bruwer</mat-card-title>
+			  </mat-card-header>
+			  <mat-card-content class="px-5 pb-5">
+			  	<div class="row">
+			  		<div class="col-12">
+			  			<p class="entryInfo"><span>Email:</span><br />
+			  			<a href="mailto:jjbruwer@gmail.com?subject=Welcome Jaco you are hired!">jjbruwer@gmail.com</a></p>
+			  		</div>
+			  	</div>
+			  </mat-card-content>
+			</mat-card>
+        </div>
+    </div>
+</div>
