--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+}
+
+.mat-toolbar {
+  background-color: #fff !important;
+}
+
+h1, h2, h3, p {
+  color: #505050;
+  font-family: 'Raleway', sans-serif;
+}
 
 .containerBox {
   display: flex;
@@ -20,3 +34,100 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-drawer-content {
   flex: 1;
 }
+
+/* contact list starts */
+.contactsH {
+  color: #C5C5C5;
+  font-size: 0.5rem;
+}
+
+.user-list {
+  box-shadow: inset 0 .5rem 1rem rgba(0,0,0,.15) !important;
+
+  .name-list {
+    background-color: #F3F6F4;
+    min-height: calc(100vh - 64px);
+    box-shadow: inset 0 .5rem 1rem rgba(0,0,0,.15) !important;
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+
+      li {
+        display: block;
+        clear: both;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        color: #A8A8A8;
+        height: 86px;
+
+        p {
+          margin-top: 15px;
+
+          span.names {
+            font-weight: 500;
+            color: #505050;
+          }
+          span.number {
+            font-size: 0.75rem
+          }
+        }
+
+        div.initials {
+          width: 70px;
+          height: 70px;
+          line-height: 70px;
+          border-radius:35px;
+          background: #54A4E1;
+          text-align: center;
+          color: #fff;
+          font-size: 2rem;
+          letter-spacing: -4px;
+          float: left;
+          margin-right: 10px;
+        }
+      }
+      li:hover, li:active {
+        border-radius: 5px;
+        background-color: #E2E2E2;
+      }
+    }
+  }
+}
+
+.mat-mdc-card-title {
+  color: #505050;
+}
+
+.entryInfo {
+  color: #505050;
+  span {
+    color: #A8A8A8;     
+  }
+
+  a:link, a:hover, a:active, a:visited {
+    color: #505050;      
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+.example-card {
+  border-radius: 5px !important;
+}
+
+.search-bar {
+    padding: 10px 0px;
+}
+
+.search-bar input {
+    width: 100%;
+    padding: 8px 13px;
+    border: none;
+    border-radius: 3px;
+    background-color: #DDD;
+    color: #A9A9A9;
+}
+/* contact list ends */
